--- a/public/views/campaigns.html
+++ b/public/views/campaigns.html
@@ -16,6 +16,15 @@
 		</article>	
 	</section>
 
+	<div class="pagination-centered">
+		<a href="/campaigns/{{ Pager }}" id="campaigns-previous" ng-if="Pager != 0"> 
+			<img src='images/previous.png' alt='Previous'>
+		</a>
+		
+		<a href="/campaigns/{{ PagerNext }}" id="campaigns-next" ng-if="1==1">
+			<img  src='images/next.png' alt='Next'>
+		</a>
+	</div>
 
 </section> 
 <script src="js/resize.js"></script>
