--- a/public/views/friendProfile.html
+++ b/public/views/friendProfile.html
@@ -53,7 +53,7 @@
 				<section class= 'con-comment' ng-repeat='BadComment in BadComments'>
 					<div class= 'comment'>
 						<div class= 'comm-up'>
-							<a href = "/product/{{GoodComment.id_product}}"><div class= 'comm-up-name'><p>{{ BadComment.name }}</p></div></a>
+							<a href = "/product/{{BadComment.id_product}}"><div class= 'comm-up-name'><p>{{ BadComment.name }}</p></div></a>
 							<div class= 'comm-up-date'><p>{{ BadComment.postDate }}</p></div>
 							<!-- <div class= 'comm-up-date'><p>25.03.2010</p></div> -->
 						</div>
