--- a/public/views/privacyPolicy.html
+++ b/public/views/privacyPolicy.html
@@ -1,4 +1,4 @@
-<section class='main-wrapper privacyPolicy-main-wrapper'>
+j<section class='main-wrapper privacyPolicy-main-wrapper'>
 
 	<section class='privacyPolicy'>
 
@@ -10,4 +10,4 @@
 	</section>
 </section>
 
-<script src="js/main.js"></script>
+<script src="js/resize.js"></script>
